--- a/test.html
+++ b/test.html
@@ -7,17 +7,11 @@
 <link rel="stylesheet" media="all" href="css/anime.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/home.js"></script>
-<header>
-<h1 class="neonText pulsate">anime</h1>
-<nav class="nav">
-    <ul class="menu neonText pulsate">
-        <li><a href="home.html">home</a></li>
-        <li><a href="anime.html">anime</a></li>
-        <li><a href="me.html">me</menu></a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
-</header>      
+<header id="header">
+	<div id="headerWrap">
+		<div class="container">
+            <h1 class="neonText pulsate">
+                  anime&book
 </head>
 <body>
 <h2 class="neonText pulsate">
@@ -25,20 +19,19 @@ book
 </h2>
       <p class="book">
                   <ul>
-                        <li><a href="#"><img src="https://res.booklive.jp/382776/001/thumbnail/X.jpg" alt="SAOの画像" ></a></li>
-                        <li><a href="#"><img src="https://res.booklive.jp/266818/001/thumbnail/X.jpg" alt="転生したらスライムだった件の画像"></a></li>
-                        <li><a href="#"><img src="https://m.media-amazon.com/images/I/81iicMiYyWL._AC_UF1000,1000_QL80_.jpg" alt="盾の勇者の成り上がりの画像"></a></li>
-                        <li><a href="#"><img src="https://m.media-amazon.com/images/I/91bejW5gbBL._AC_UF1000,1000_QL80_.jpg" alt="無職転生の画像"></a></li>
-                        <li><a href="#"><img src="" alt="の画像"></a></li>
-                  </ul>
-                  <ul>*
                         <li><a href="#"><img src="https://res.booklive.jp/382776/001/thumbnail/X.jpg" alt="SAOの画像"></a></li>
                         <li><a href="#"><img src="https://res.booklive.jp/266818/001/thumbnail/X.jpg" alt="転生したらスライムだった件の画像"></a></li>
                         <li><a href="#"><img src="https://m.media-amazon.com/images/I/81iicMiYyWL._AC_UF1000,1000_QL80_.jpg" alt="盾の勇者の成り上がりの画像"></a></li>
                         <li><a href="#"><img src="https://m.media-amazon.com/images/I/91bejW5gbBL._AC_UF1000,1000_QL80_.jpg" alt="無職転生の画像"></a></li>
                         <li><a href="#"><img src="" alt="の画像"></a></li>
                   </ul>
-            </div>
+                  <ul>
+                        <li><a href="#"><img src="https://res.booklive.jp/382776/001/thumbnail/X.jpg" alt="SAOの画像"></a></li>
+                        <li><a href="#"><img src="https://res.booklive.jp/266818/001/thumbnail/X.jpg" alt="転生したらスライムだった件の画像"></a></li>
+                        <li><a href="#"><img src="https://m.media-amazon.com/images/I/81iicMiYyWL._AC_UF1000,1000_QL80_.jpg" alt="盾の勇者の成り上がりの画像"></a></li>
+                        <li><a href="#"><img src="https://m.media-amazon.com/images/I/91bejW5gbBL._AC_UF1000,1000_QL80_.jpg" alt="無職転生の画像"></a></li>
+                        <li><a href="#"><img src="" alt="の画像"></a></li>
+                  </ul>
       </p>
 <h2 class="neonText pulsate">
 anime
@@ -60,7 +53,6 @@ anime
                         <li><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSF9HI_21pVvbwSlrgz3gPjoNBGKPlfGIT2Ig&s" alt="無職転生の画像"></a></li>
                         <li><a href="#"><img src="" alt="の画像"></a></li>
                   </ul>
-            </div>
       </p>     
       
       </body>
