--- a/me.html
+++ b/me.html
@@ -7,15 +7,22 @@
 <link rel="stylesheet" media="all" href="css/me.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/home.js"></script>
-<header id="header">
-	<div id="headerWrap">
-		<div class="container">
-            <h1 class="neonText pulsate">
-                  me
-
-</head>
+<header>
+      <h1 class="neonText pulsate">me</h1>
+      <nav class="nav">
+          <ul class="menu neonText pulsate">
+              <li><a href="home.html">home</a></li>
+              <li><a href="anime.html">anime</a></li>
+              <li><a href="me.html">me</menu></a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </nav>
+      </header>      
+      </head>
 <body>
       <p></p>
+
+
 
 
 
