--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,24 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" media="all" href="css/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="JS/home.js"></script>
 </head>
 <body>
+    <header>
+        <h1 class="neonText pulsate">GAME</h1>
+        <nav class="nav">
+            <ul class="menu neonText pulsate">
+                <li><a href="home.html">home</a></li>
+                <li><a href="anime.html">anime</a></li>
+                <li><a href="me.html">me</a></li>
+                <li><a href="game.html">game</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container neonText pulsate">
         <h1>Contact</h1>
         <form action="/submit_contact_form" method="post">
