--- a/anime.html
+++ b/anime.html
@@ -13,7 +13,7 @@
     <h1 class="neonText pulsate">anime</h1>
     <nav class="nav">
         <ul class="menu neonText pulsate">
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="anime.html">anime</a></li>
             <li><a href="me.html">me</a></li>
             <li><a href="contact.html">contact</a></li>
