--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <header>
-        <h1 class="neonText pulsate">GAME</h1>
         <nav class="nav">
             <ul class="menu neonText pulsate">
-                <li><a href="home.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="anime.html">anime</a></li>
                 <li><a href="me.html">me</a></li>
                 <li><a href="game.html">game</a></li>
