--- a/me.html
+++ b/me.html
@@ -11,7 +11,7 @@
       <h1 class="neonText pulsate">me</h1>
       <nav class="nav">
           <ul class="menu neonText pulsate">
-              <li><a href="home.html">home</a></li>
+              <li><a href="index.html">home</a></li>
               <li><a href="anime.html">anime</a></li>
               <li><a href="me.html">me</menu></a></li>
               <li><a href="contact.html">Contact</a></li>
