--- a/me.html
+++ b/me.html
@@ -13,18 +13,16 @@
           <ul class="menu neonText pulsate">
               <li><a href="index.html">home</a></li>
               <li><a href="anime.html">anime</a></li>
-              <li><a href="me.html">me</menu></a></li>
+              <li><a href="me.html">me</a></li>
               <li><a href="contact.html">Contact</a></li>
           </ul>
       </nav>
-      </header>      
-      </head>
+</header>      
+</head>
 <body>
-      <p></p>
-
-
-
-
-
-
-
+    <div class="container pulsate">
+        <section>
+        </section>
+    </div>
+</body>
+</html>
