--- a/game.html
+++ b/game.html
@@ -6,14 +6,14 @@
 <title>game</title>
 <link rel="stylesheet" media="all" href="css/game.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/home.js"></script>
+<script src="jshome.js"></script>
 <header>
   <h1 class="neonText pulsate">GAME</h1>
   <nav class="nav">
       <ul class="menu neonText pulsate">
           <li><a href="index.html">home</a></li>
-          <li><a href="anime.html">anime</a></li>
-          <li><a href="me.html">me</menu></a></li>
+          <li><a href="book.html">book</a></li>
+          <li><a href="me.html">me</a></li>
           <li><a href="contact.html">Contact</a></li>
       </ul>
   </nav>
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<p class="game">
+<p class="gameila">
       <div class="loopSlide">
             <ul>
               <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
@@ -41,7 +41,18 @@
             </ul>
           </div>
 </p>
-    
+<section>
+<div class="game neonText pulsate">
+  <ul>
+      <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像">valorant</a></li>
+      <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像">overwatch</a></li>
+      <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像">APEX</a></li>
+      <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像">原神</a></li>
+      <li><a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像">崩壊スターレイル</a></li>
+      <li><a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像">ゼンレスゾーンゼロ</a></li>
+  </ul>
+</div>
+
 </body>
 <footer>
 
