--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body id="top">
+<div id="splash">
+    <div id="splash_text">Loading...</div>
+    <div id="progress_bar"></div>
+    <div class="loader_cover-up"></div>
+    <div class="loader_cover-down"></div>
+</div>
+
 <header id="header">
 	<div id="headerWrap">
 		<div class="container">
@@ -27,12 +34,12 @@
                         <span></span>
                         game
                     </a>
-                    <a href="anime.html">
+                    <a href="book.html">
                         <span></span>
                         <span></span>
                         <span></span>
                         <span></span>
-                        anime
+                        book&anime
                     </a>
                     <a href="music.html">
                         <span></span>
@@ -52,13 +59,15 @@
                         <span></span>
                         <span></span>
                         contact
-                        
                     </a>
 				</ul>
 			</div>
 		</nav>
 	</div>
 </header>
+
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
+<script src="JS/home.js"></script>
 </body>
+</html>
