--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
     <title>Contact</title>
     <link rel="stylesheet" media="all" href="css/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="JS/home.js"></script>
+    <script src="JShome.js"></script>
 </head>
 <body>
     <header>
         <nav class="nav">
             <ul class="menu neonText pulsate">
                 <li><a href="index.html">home</a></li>
-                <li><a href="anime.html">anime</a></li>
+                <li><a href="book.html">book</a></li>
                 <li><a href="me.html">me</a></li>
                 <li><a href="game.html">game</a></li>
             </ul>
