--- a/me.html
+++ b/me.html
@@ -6,13 +6,13 @@
 <title>me</title>
 <link rel="stylesheet" media="all" href="css/me.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/home.js"></script>
+<script src="jhome.js"></script>
 <header>
       <h1 class="neonText pulsate">me</h1>
       <nav class="nav">
           <ul class="menu neonText pulsate">
               <li><a href="index.html">home</a></li>
-              <li><a href="anime.html">anime</a></li>
+              <li><a href="book.html">book</a></li>
               <li><a href="me.html">me</a></li>
               <li><a href="contact.html">Contact</a></li>
           </ul>
