--- a/game.html
+++ b/game.html
@@ -1,59 +1,76 @@
 <!doctype html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<title>game</title>
-<link rel="stylesheet" media="all" href="css/game.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="jshome.js"></script>
-<header>
-  <h1 class="neonText pulsate">GAME</h1>
-  <nav class="nav">
-      <ul class="menu neonText pulsate">
-          <li><a href="index.html">home</a></li>
-          <li><a href="book.html">book</a></li>
-          <li><a href="me.html">me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
-</header>      
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>game</title>
+    <link rel="stylesheet" media="all" href="css/game.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="jshome.js"></script>
 </head>
 
 <body>
-<p class="gameila">
-      <div class="loopSlide">
-            <ul>
-              <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
-              <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a></li>
-              <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a></li>
-              <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a></li>
-              <li><a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a></li>
-              <li><a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a></li>
+    <header>
+        <h1 class="neonText pulsate">GAME</h1>
+        <nav class="nav">
+            <ul class="menu neonText pulsate">
+                <li><a href="index.html">home</a></li>
+                <li><a href="book.html">book</a></li>
+                <li><a href="me.html">me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-            <ul>
-              <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
-              <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a></li>
-              <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a></li>
-              <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a></li>
-              <li><a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a></li>
-              <li><a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a></li>
-            </ul>
-          </div>
-</p>
-<section>
-<div class="game neonText pulsate">
-  <ul>
-      <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像">valorant</a></li>
-      <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像">overwatch</a></li>
-      <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像">APEX</a></li>
-      <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像">原神</a></li>
-      <li><a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像">崩壊スターレイル</a></li>
-      <li><a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像">ゼンレスゾーンゼロ</a></li>
-  </ul>
-</div>
+        </nav>
+    </header>
 
+    <div class="loopSlide">
+        <ul>
+            <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
+            <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a></li>
+            <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a></li>
+            <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a></li>
+            <li><a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a></li>
+            <li><a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a></li>
+        </ul>
+        <ul>
+            <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
+            <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a></li>
+            <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a></li>
+            <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a></li>
+            <li><a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a></li>
+            <li><a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a></li>
+        </ul>
+    </div>
+
+    <section>
+        <div class="game-list">
+            <div class="game-item">
+                <a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a>
+                <p>VALORANT</p>
+            </div>
+            <div class="game-item">
+                <a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a>
+                <p>Overwatch</p>
+            </div>
+            <div class="game-item">
+                <a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a>
+                <p>APEX Legends</p>
+            </div>
+            <div class="game-item">
+                <a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a>
+                <p>Genshin Impact</p>
+            </div>
+            <div class="game-item">
+                <a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a>
+                <p>崩壊:スターレイル</p>
+            </div>
+            <div class="game-item">
+                <a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a>
+                <p>ゼンレスゾーンゼロ</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+    </footer>
 </body>
-<footer>
-
-</footer>
+</html>
