--- a/me.html
+++ b/me.html
@@ -6,23 +6,52 @@
 <title>me</title>
 <link rel="stylesheet" media="all" href="css/me.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="jhome.js"></script>
-<header>
-      <h1 class="neonText pulsate">me</h1>
-      <nav class="nav">
-          <ul class="menu neonText pulsate">
-              <li><a href="index.html">home</a></li>
-              <li><a href="book.html">book</a></li>
-              <li><a href="me.html">me</a></li>
-              <li><a href="contact.html">Contact</a></li>
-          </ul>
-      </nav>
-</header>      
+<script src="JS/me.js"></script>
 </head>
 <body>
-    <div class="container pulsate">
-        <section>
+    <div class="container">
+        <header>
+            <h1 class="neon-text">Okina Shuji</h1>
+            <p class="tagline neon-text">ホワイトハッカー専攻</p>
+        </header>
+
+        <section class="about">
+            <h2 class="neon-text">自己紹介</h2>
+            <p>
+                ここに自己紹介文を入力します。あなたの経歴や興味、情熱について述べてください。
+            </p>
         </section>
+
+        <section class="skills">
+            <h2 class="neon-text">スキル</h2>
+            <div class="skills-list">
+                <div class="skill-item">
+                    <h3>HTML</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>CSS</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>JavaScript</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>Photoshop</h3>
+                </div>
+            </div>
+        </section>
+
+
+        <footer>
+            <p>&copy; 2024 あなたの名前</p>
+            <div class="social-links">
+                <a href="#" class="social-link">Twitter</a>
+                <a href="#" class="social-link">LinkedIn</a>
+                <a href="#" class="social-link">GitHub</a>
+            </div>
+        </footer>
     </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
