--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>home</title>
 <link rel="stylesheet" media="all" href="css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
 <script src="JS/home.js"></script>
 </head>
 
@@ -41,12 +42,6 @@
                         <span></span>
                         book&anime
                     </a>
-                    <a href="music.html">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        music
                     <a href="me.html">
                         <span></span>
                         <span></span>
