--- a/book.html
+++ b/book.html
@@ -6,21 +6,22 @@
 <title>anime&book</title>
 <link rel="stylesheet" media="all" href="css/book.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="jshome.js"></script>
+<script src="js/book.js"></script>
 </head>
 <body>
-<header>
-    <h1 class="neonText pulsate">anime</h1>
-    <nav class="nav">
-        <ul class="menu neonText pulsate">
-            <li><a href="index.html">home</a></li>
-            <li><a href="anime.html">anime</a></li>
-            <li><a href="me.html">me</a></li>
-            <li><a href="contact.html">contact</a></li>
-        </ul>
-    </nav>
-</header> 
-
+    <header>
+        <h1 class="neonText pulsate">anime</h1>
+        <nav class="nav">
+            <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button> <!-- Added menu toggle button -->
+            <ul class="menu neonText pulsate">
+                <li><a href="index.html">home</a></li>
+                <li><a href="game.html">game</a></li>
+                <li><a href="me.html">me</a></li>
+                <li><a href="contact.html">contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 <main>
     <section>
         <h2 class="neonText pulsate">book</h2>
@@ -53,6 +54,11 @@
 <footer>
     <div class="btn-backtotop"><a href="#top" data-scroll>トップへ戻る</a></div>
 </footer>
+<script>
+    document.querySelector('.menu-toggle').addEventListener('click', function() {
+        document.querySelector('.menu').classList.toggle('open');
+    });
+</script>
 
 </body>
 </html>
