--- a/book.html
+++ b/book.html
@@ -6,7 +6,7 @@
 <title>anime&book</title>
 <link rel="stylesheet" media="all" href="css/book.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/book.js"></script>
+<script src="js/book.js" defer></script>
 </head>
 <body>
     <header>
@@ -54,11 +54,5 @@
 <footer>
     <div class="btn-backtotop"><a href="#top" data-scroll>トップへ戻る</a></div>
 </footer>
-<script>
-    document.querySelector('.menu-toggle').addEventListener('click', function() {
-        document.querySelector('.menu').classList.toggle('open');
-    });
-</script>
-
 </body>
 </html>
