--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <title>game</title>
     <link rel="stylesheet" media="all" href="css/game.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="jshome.js"></script>
+    <script src="JS/game.js" defer></script>
 </head>
 
 <body>
@@ -74,10 +74,5 @@
     <footer>
     </footer>
 </body>
-<script>
-    document.querySelector('.menu-toggle').addEventListener('click', function() {
-        document.querySelector('.menu').classList.toggle('open');
-    });
-</script>
-
+<script></script>
 </html>
