--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <header>
         <h1 class="neonText pulsate">game</h1>
         <nav class="nav">
-            <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button> <!-- Added menu toggle button -->
+            <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button> 
             <ul class="menu neonText pulsate">
                 <li><a href="index.html">home</a></li>
                 <li><a href="book.html">book</a></li>
@@ -25,7 +25,7 @@
 
     <div class="loopSlide">
         <ul>
-            <li><a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
+            <li><a href=""><img src="img/valorant.jpg" alt="valorantの画像"></a></li>
             <li><a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a></li>
             <li><a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a></li>
             <li><a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a></li>
@@ -45,27 +45,27 @@
     <section>
         <div class="game-list">
             <div class="game-item">
-                <a href="#"><img src="img/valorant.jpg" alt="valorantの画像"></a>
+                <a href="https://playvalorant.com/ja-jp/"><img src="img/valorant.jpg" alt="valorantの画像"></a>
                 <p>VALORANT</p>
             </div>
             <div class="game-item">
-                <a href="#"><img src="img/overwatch.jpg" alt="overwatchの画像"></a>
+                <a href="https://overwatch.blizzard.com/ja-jp/"><img src="img/overwatch.jpg" alt="overwatchの画像"></a>
                 <p>Overwatch</p>
             </div>
             <div class="game-item">
-                <a href="#"><img src="img/Apex.jpg" alt="APEXの画像"></a>
+                <a href="https://www.ea.com/ja-jp/games/apex-legends/news"><img src="img/Apex.jpg" alt="APEXの画像"></a>
                 <p>APEX Legends</p>
             </div>
             <div class="game-item">
-                <a href="#"><img src="img/genshin.jpg" alt="原神の画像"></a>
+                <a href="https://genshin.hoyoverse.com/ja"><img src="img/genshin.jpg" alt="原神の画像"></a>
                 <p>Genshin Impact</p>
             </div>
             <div class="game-item">
-                <a href="#"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a>
+                <a href="https://hsr.hoyoverse.com/ja-jp/home?utm_source=hsrofficialweb&utm_medium=fab&utm_campaign=button"><img src="img/崩壊スターレイル.jpg" alt="崩壊スターレイルの画像"></a>
                 <p>崩壊:スターレイル</p>
             </div>
             <div class="game-item">
-                <a href="#"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a>
+                <a href="https://zenless.hoyoverse.com/ja-jp/"><img src="img/ZZZ.jpg" alt="ゼンレスゾーンゼロの画像"></a>
                 <p>ゼンレスゾーンゼロ</p>
             </div>
         </div>
