--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
     <header>
                 <nav class="nav">
-                    <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button> <!-- Added menu toggle button -->
+                    <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button> 
                     <ul class="menu neonText pulsate">
                         <li><a href="index.html">home</a></li>
                         <li><a href="game.html">game</a></li>
